tests/snapshots/presenter__presenter_dirty_dir_glyph.snap
---
source: tests/presenter.rs
expression: "render(&state, 60, 14)"
---
"┌r──────────────────────────────────────────────[-]─[p]─[x]┐"
"│● ▾ changed                                               │"
"│M   a.rs                                                  │"
"│A   b.rs                                                  │"
"│  ▸ clean                                                 │"
"│D gone.txt                                                │"
"│? scratch.log                                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
