tests/snapshots/presenter__presenter_empty_directory.snap
---
source: tests/presenter.rs
expression: "render(&state, 100, 24)"
---
"┌r──────────────────────────[-]─[p]─[x]┐┌src───────────────────────────────────────────────────────┐"
"│  ▾ src                               ││Directory: select a file to view                          │"
"│M   main.rs                           ││                                                          │"
"│    ▾ inner                           ││                                                          │"
"│A     added.rs                        ││                                                          │"
"│  README.md                           ││                                                          │"
"│D gone.txt                            ││                                                          │"
"│? scratch.log                         ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
