tests/snapshots/presenter__presenter_finder_empty_query.snap
---
source: tests/presenter.rs
expression: "render(&finder_state_empty_query(), 100, 24)"
---
"┌r──────────────────────────[-]─[p]─[x]┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Showing first 5000 lines (truncated)                      │"
"│M   main.rs                           ││delta not found — showing plain diff                      │"
"│    ▾ inner                           ││fn main() {                                               │"
"│A     added.rs                        ││    println!("hello");                                    │"
"│  README.md                           ││}                                                         │"
"│D gone.txt                            ││                                                          │"
"│? scratch.log                         ││                                                          │"
"│                                      ││                                                          │"
"│                          ┌Go to file─────────────────────────────────┐                           │"
"│                          │                                           │                           │"
"│                          │ > type to find a file…                    │                           │"
"│                          │                                           │                           │"
"│                          └─↑↓ move · ←→ scroll · ⏎ open · esc cancel─┘                           │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
