tests/snapshots/presenter__presenter_finder_with_matches.snap
---
source: tests/presenter.rs
expression: "render(&finder_state_with_matches(), 100, 24)"
---
"┌┌Go to file──────────────────────────────────────────────────────────────────────────────────────┐┐"
"││                                                                                                ││"
"││ > main                                                                                         ││"
"││ main.rs  src                                                                                   ││"
"││ main_helper.rs  src/inner                                                                      ││"
"││ README.md                                                                                      ││"
"││                                                                                                ││"
"│└───────────────────────────↑↓ move · ←→ scroll · ⏎ open · esc cancel────────────────────────────┘│"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
