tests/snapshots/presenter__presenter_help.snap
---
source: tests/presenter.rs
expression: "render(&help_state(), 100, 24)"
---
"┌r──────────────────────────[-]─[p]─[x]┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src    ┌Help: What's New  ▶ About  Settings───────────────────────────────────────┐           │"
"│M   main.rs│                                                                          │           │"
"│    ▾ inner│                             Herdr File Viewer                            │           │"
"│A     added│                    A git-aware, read-only file viewer                    │           │"
"│  README.md│                                                                          │           │"
"│D gone.txt │             github.com/thuanlm215/advanced-herdr-file-viewer             │           │"
"│? scratch.l│                                                                          │           │"
"│           │                           v1.13.0 · Up to date                           │           │"
"│           │                                MIT License                               │           │"
"│           │                                                                          │           │"
"│           │   If you enjoy the file viewer, don't forget to give it a ★ on GitHub!   │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           │                                                                          │           │"
"│           └───────────────────────Tab/←→ switch · Esc/q close────────────────────────┘           │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
